[package]
name = "slicec"
version = "0.1.2"
authors = ["ZeroC Inc."]
description = """
The Slice parser and other core components for Slice compilers.
"""
homepage = "https://docs.icerpc.dev/slice2"
documentation = "https://docs.rs/slicec"
repository = "https://github.com/icerpc/slicec"
readme = "README.md"
keywords = ["slice", "ice", "icerpc"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.70"
exclude = [".github/*", ".vscode/*"]

[dependencies]
# derive feature allows structs to derive Parser automatically
clap = { version = "4.3.15", features = ["derive"] }
console = "0.15.7"
convert_case = "0.6.0"
in_definite = "0.2.5"
lalrpop-util = "0.20.0"
# derive feature allows structs to derive Serialize automatically
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"

[build-dependencies]
# The default features enable a built-in lexer. We supply our own lexer so we don't need these.
lalrpop = { version = "0.20.0", default-features = false }

[dev-dependencies]
test-case = "3.1.0"

[lib]
name = "slicec"
path = "src/lib.rs"
