[package]
name = "slice"
version = "0.1.0"
authors = ["ZeroC Inc."]
description = """
These are the slice compilers!
"""
keywords = ["ice", "rpc", "icerpc", "zeroc", "awesome"]
license = "Apache-2.0"
edition = "2018"
### These are other things that seem common to put in Cargo files ###
### Link: https://doc.rust-lang.org/cargo/reference/manifest.html ###

[dependencies]
pest = "2.0"
pest_consume = "1.0.6"
structopt = "0.3.13"

[lib]
name = "slice"
path = "src/slice/lib.rs"

[[bin]]
name = "slicec-cs"
path = "src/slicec-cs/main.rs"
