[package]
name = "slice-codec"

description = """
TODO
"""
homepage = "https://docs.icerpc.dev/slice2"
documentation = "https://docs.rs/slice-codec"
repository = "https://github.com/icerpc/slice-rust"
readme = "README.md"
keywords = ["slice", "ice", "icerpc"]
rust-version = "1.73"

# Get these crate fields from the top-level workspace 'Cargo.toml'.
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "slice_codec"
path = "src/lib.rs"

[dependencies]
bytes = { version = "1.5.0", optional = true }

[features]
default = ["slice2", "std"]

# Provides support for the Slice2 encoding.
slice2 = []

# Provides support for the Slice1 encoding.
slice1 = []

# Provides implementations for encoding and decoding common standard library types like `String`, `Vec`, `HashMap`, etc.
# Requires a dependency on the Rust standard library.
std = ["alloc"]

# Provides implementations for decoding common types that require dynamic allocations like `String` and `Vec`.
# Requires host applications to configure a global allocator, if the 'std' feature is unset.
alloc = []

# Provides support for encoding from and decoding into the types exposed by the `bytes` crate.
bytes = ["dep:bytes", "alloc"]

[package.metadata.docs.rs]
all-features = true
