[package]
name = "slicec"
version = "0.1.0"
authors = ["ZeroC Inc."]
description = """
The Slice parser and other core components for Slice compilers.
"""
keywords = ["slice", "ice", "icerpc"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
once_cell = "1.8.0"
pest = "2.0"
pest_derive = "2.0"
pest_consume = "1.0.6"
structopt = "0.3.13"

[lib]
name = "slice"
path = "src/lib.rs"
